@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Defs>
-  <!-- This file is no longer used, but since the workshop doesn't seem to consistently
-	     delete files on mod updates, we're leaving it here to avoid mod corruption errors.
-	     We leave a placeholder pawn relation def since that should leave no side-effects.
-	-->
-  <EdB.PrepareCarefully.CarefullyPawnRelationDef>
-    <defName>EdBPrepareCarefullyDummyDefinitionMapGenerators</defName>
-  </EdB.PrepareCarefully.CarefullyPawnRelationDef>
+
+  <GenStepDef>
+    <defName>RemovePrepareCarefullyScenParts</defName>
+    <linkWithMapGenerator>BasicMap</linkWithMapGenerator>
+    <order>2147483647</order>
+    <genStep Class="EdB.PrepareCarefully.GenStep_RemovePrepareCarefullyScenario"/>
+  </GenStepDef>
+
 </Defs>
