@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ThingDefs>
-	<!-- This file is no longer used, but since the workshop doesn't seem to consistently
-	     delete files on mod updates, we're leaving it here to avoid mod corruption errors.
-	     We leave a placeholder pawn relation def since that should leave no side-effects.
-	-->
-	<EdB.PrepareCarefully.CarefullyPawnRelationDef>
-		<defName>EdBPrepareCarefullyDummyDefinition</defName>
-	</EdB.PrepareCarefully.CarefullyPawnRelationDef>
+  <!-- This file is no longer used, but since the workshop doesn't seem to consistently
+       delete files on mod updates, we're leaving it here to avoid mod corruption errors.
+       We leave a placeholder pawn relation def since that should leave no side-effects.
+  -->
+  <EdB.PrepareCarefully.CarefullyPawnRelationDef>
+    <defName>EdBPrepareCarefullyDummyDefinition</defName>
+  </EdB.PrepareCarefully.CarefullyPawnRelationDef>
 </ThingDefs>
